@@ -10,25 +10,32 @@ import com.kob.backend.utils.JwtUtil;
 import org.apache.http.NameValuePair;
 import org.apache.http.message.BasicNameValuePair;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.Duration;
-import java.util.*;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Random;
 
 @Service
 public class AcAppServiceImpl implements AcAppService {
-    private final static String appId = "2703";
-    private final static String appSecret = "dfa492fef91143c19f81603c27355197";
-    private final static String redirectUri = "https://app2703.acapp.acwing.com.cn/api/user/account/acwing/acapp/receive_code/";
-    private final static String applyAccessTokenUrl = "https://www.acwing.com/third_party/api/oauth2/access_token/";
-    private final static String getUserInfoUrl = "https://www.acwing.com/third_party/api/meta/identity/getinfo/";
+    @Value("${acwing-web-service.appId}")
+    private String appId;
+    @Value("${acwing-web-service.appSecret}")
+    private String appSecret;
+    @Value("${acwing-web-service.redirectUri}")
+    private String redirectUri;
+    @Value("${acwing-web-service.applyAccessTokenUrl}")
+    private String applyAccessTokenUrl;
+    @Value("${acwing-web-service.getUserInfoUrl}")
+    private String getUserInfoUrl;
     private final static Random random = new Random();
     @Autowired
     private UserMapper userMapper;
-
     @Autowired
     private RedisTemplate<String, String> redisTemplate;
 
@@ -36,13 +43,7 @@ public class AcAppServiceImpl implements AcAppService {
     public JSONObject applyCode() {
         JSONObject resp = new JSONObject();
         resp.put("appid", appId);
-        try {
-            resp.put("redirect_uri", URLEncoder.encode(redirectUri, "UTF-8"));
-        } catch (UnsupportedEncodingException e) {
-            e.printStackTrace();
-            resp.put("result", "failed");
-            return resp;
-        }
+        resp.put("redirect_uri", URLEncoder.encode(redirectUri, StandardCharsets.UTF_8));
         resp.put("scope", "userinfo");
 
         StringBuilder state = new StringBuilder();
@@ -79,7 +80,7 @@ public class AcAppServiceImpl implements AcAppService {
         List<User> users = userMapper.selectList(queryWrapper);
         if (!users.isEmpty()) {
             User user = users.get(0);
-            String jwt = JwtUtil.createJWT(user.getId().toString());
+            String jwt = JwtUtil.createJWT(user);
             resp.put("result", "success");
             resp.put("jwt_token", jwt);
             return resp;
@@ -113,7 +114,7 @@ public class AcAppServiceImpl implements AcAppService {
                 openid
         );
         userMapper.insert(user);
-        String jwt = JwtUtil.createJWT(user.getId().toString());
+        String jwt = JwtUtil.createJWT(user);
         resp.put("result", "success");
         resp.put("jwt_token", jwt);
         return resp;
